--- a/exer4/.vscode/launch.json
+++ b/exer4/.vscode/launch.json
@@ -4,6 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "name": "Launch Chrome",
+            "request": "launch",
+            "type": "chrome",
+            "url": "http://localhost:8080",
+            "webRoot": "$C:/Users/danie/BoG/bootcamp/bootcamp-f23-DanielChee/demos/demos/index.html"
+        },
         
         {
             "type": "node",
